<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:elevation="900dp"
    android:outlineSpotShadowColor="@color/blue"
    app:cardBackgroundColor="@color/black_light"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/padding10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout_btn_sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_small"
                style="@style/CustomTextStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/rectangle_blue_border"
                android:text="@string/small" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_medium"
                style="@style/CustomTextStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="3dp"

                android:background="@drawable/rectangle_blue_border"
                android:text="@string/medium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_large"
                style="@style/CustomTextStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rectangle_blue_border"
                android:text="@string/large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <TextView
                android:id="@+id/tv_dollar_sign"
                style="@style/CustomTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:text="$ " />

            <TextView
                android:id="@+id/tv_price"
                style="@style/CustomTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:text=" 35" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/minus_sign"
                android:textAlignment="center"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/tv_quantity"
                style="@style/CustomTextStyle"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margintop5dp"

                android:layout_marginEnd="@dimen/margintop5dp"
                android:gravity="center"
                android:text="1" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/plus_sign"
                android:textAlignment="center"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>